<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.createStory.CreateStoryFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/loading_upload"
                style="?android:attr/progressBarStyle"
                android:layout_width="125dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_camera"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="416dp"
                android:layout_height="271dp"
                android:contentDescription="@string/imagestory"
                android:src="@drawable/ic_preview_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_camera"
                android:layout_width="146dp"
                android:layout_height="58dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:text="@string/btn_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_preview" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="146dp"
                android:layout_height="58dp"
                android:layout_marginTop="36dp"
                android:text="@string/btn_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_camera"
                app:layout_constraintTop_toBottomOf="@+id/image_preview" />


            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/tv_description_createStory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_camera" />

            <EditText
                android:id="@+id/ed_description"
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/ed_description_createStory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.391"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <Button
                android:id="@+id/button_upload"
                android:layout_width="225dp"
                android:layout_height="58dp"
                android:layout_marginTop="32dp"
                android:text="@string/btn_upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_location" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:text="@string/switch_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
